fix: adjust icon positioning in Input component for better alignment

--- a/src/components/atoms/Input.css
+++ b/src/components/atoms/Input.css
@@ -1,7 +1,7 @@
 .icon {
   position: relative;
-  left: 30px;
-  top: 10px;
+  left: 15px;
+  top: 37px;
   width: 20px;
   height: 20px;
 }
